src/test/ui/issues/issue-28324.mir.stderr
error[E0133]: use of extern static is unsafe and requires unsafe function or block
  --> $DIR/issue-28324.rs:8:24
   |
LL | pub static BAZ: u32 = *&error_message_count;
   |                        ^^^^^^^^^^^^^^^^^^^^ use of extern static
   |
   = note: extern statics are not controlled by the Rust type system: invalid data, aliasing violations or data races will cause undefined behavior

error: aborting due to previous error

For more information about this error, try `rustc --explain E0133`.
